--- a/front/src/app/components/user-profile/user-profile.component.scss
+++ b/front/src/app/components/user-profile/user-profile.component.scss
@@ -23,6 +23,10 @@ button {
   width: 60%;
 }
 
+.password{
+  margin-bottom: 1rem;
+}
+
 .logout-link {
   margin-top: 0.5rem;
   text-decoration: none;
@@ -30,6 +34,10 @@ button {
 }
 
 .user-profile-card {
+  mat-card-header {
+    display: flex;
+    flex-direction: column;
+  }
   mat-card-title {
     margin: 1rem;
   }
@@ -79,7 +87,6 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 .avatar-item img {
@@ -90,7 +97,7 @@ button {
   object-fit: cover;
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
-  z-index:40;
+  z-index: 40;
 }
 
 .avatar-item img:hover {
