--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -30,10 +30,10 @@
         <input matInput type="password" formControlName="password" required>
         <mat-error *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
           <span *ngIf="registerForm.get('password')?.errors?.['required']">Le mot de passe est requis</span>
-          <span *ngIf="registerForm.get('password')?.errors?.['minlength']">Minimum 6 caractères</span>
+          <span *ngIf="registerForm.get('password')?.errors?.['minlength']">Minimum 8 caractères</span>
           <span *ngIf="registerForm.get('password')?.errors?.['maxlength']">Maximum 40 caractères</span>
           <span *ngIf="registerForm.get('password')?.errors?.['pattern']">
-            Au moins une majuscule, un chiffre et un symbole</span>
+            Au moins une minuscule, une Majuscule, 1 chiffre et un $ymbole</span>
         </mat-error>
       </mat-form-field>
 
